--- a/litho.docs/2、架构概览.md
+++ b/litho.docs/2、架构概览.md
@@ -2,468 +2,583 @@
 
 ## 1. 架构概览 (Architecture Overview)
 
-### 1.1 架构设计理念
-Litho-Book系统采用模块化设计理念，强调高内聚和低耦合的架构原则。系统通过明确的接口和数据结构将各模块连接起来，确保每个模块的职责清晰，便于维护和扩展。系统设计目标是高效、可扩展和易用，通过Rust语言和Axum框架的选择，确保系统的性能和可靠性。
+### 架构设计理念
+Litho Book 遵循**轻量级、离线优先、隐私安全**的核心设计哲学，旨在为开发者和技术文档作者提供一种无需云端依赖的本地 Markdown 文档浏览解决方案。系统采用**命令行驱动 + Web 服务渲染**的混合交互模式，结合了 CLI 的简洁启动与 Web 界面的丰富交互优势。
 
-### 1.2 核心架构模式
-- **模块化架构**：系统划分为命令行接口域、错误处理域、文件系统域和服务器域四个核心模块，每个模块负责特定功能，通过明确的接口进行交互。
-- **分层架构**：系统采用分层架构，将业务逻辑、数据访问和用户接口分离，便于管理和扩展。
-- **事件驱动架构**：系统通过事件驱动的方式处理用户请求，提高系统的响应速度和并发处理能力。
+架构设计强调：
+- **零外部依赖**：不依赖数据库、云存储或复杂构建工具
+- **单机运行**：完全在本地环境中执行，保障数据隐私
+- **快速启动**：通过 Rust 编译优化实现毫秒级服务启动
+- **结构化展示**：将扁平文件系统转化为可导航的知识图谱
 
-### 1.3 技术栈概述
-- **编程语言**：Rust
-- **Web框架**：Axum
-- **命令行解析**：Clap
-- **错误处理**：Thiserror
-- **日志和跟踪**：Tracing和Tracing_subscriber
-- **异步运行时**：Tokio
-- **序列化和反序列化**：Serde和Serde_json
-- **Markdown解析**：Pulldown_cmark
+### 核心架构模式
+系统采用典型的**分层架构（Layered Architecture）**，包含清晰的职责分离：
+
+```
+┌─────────────────┐
+│   用户界面层    │ ← 浏览器端 HTML/CSS/JS
+└────────┬────────┘
+         ↓
+┌────────▼────────┐
+│   服务接口层    │ ← Axum HTTP 路由处理器
+└────────┬────────┘
+         ↓
+┌────────▼────────┐
+│   数据处理层    │ ← DocumentTree 构建与管理
+└────────┬────────┘
+         ↓
+┌────────▼────────┐
+│   数据源层      │ ← 操作系统文件系统
+└─────────────────┘
+```
+
+同时融合了**模块化设计**原则，各功能域高内聚、低耦合，便于维护和扩展。
+
+### 技术栈概述
+| 类别 | 技术选型 | 选择理由 |
+|------|--------|---------|
+| **编程语言** | Rust | 内存安全、高性能、编译为静态二进制 |
+| **Web 框架** | Axum | 异步支持好、类型安全、与 Tokio 兼容 |
+| **CLI 解析** | Clap | 声明式 API、自动帮助生成、跨平台 |
+| **错误处理** | thiserror | 统一错误封装、上下文追溯 |
+| **序列化** | Serde | 高效 JSON 处理、宏驱动 |
+| **日志系统** | Tracing | 结构化日志、异步友好 |
+| **异步运行时** | Tokio | 成熟生态、高性能事件循环 |
+
+---
 
 ## 2. 系统上下文 (System Context)
 
-### 2.1 系统定位与价值
-Litho-Book是一个基于Rust的文档管理系统，提供Web界面用于管理和查看Markdown文档。系统的核心价值在于为技术作家和开发人员提供一个高效、可扩展和易用的文档管理解决方案，支持文档的搜索、导航和交互功能。
+### 系统定位与价值
+Litho Book 定位于**本地知识库可视化工具**，填补了传统文件管理器与静态网站生成器之间的体验空白。其核心价值在于：
+- 将分散的 `.md` 文件组织为结构化的文档树
+- 提供浏览器端的搜索、导航和预览功能
+- 实现“开箱即用”的零配置文档服务
+- 保障敏感技术文档的本地化存储与访问
 
-### 2.2 用户角色与场景
-- **技术作家**：
-  - 需要管理和发布文档
-  - 需要Web界面查看和交互文档
-  - 需要搜索和导航大型文档集合
-- **开发人员**：
-  - 需要管理和发布文档
-  - 需要Web界面查看和交互文档
-  - 需要搜索和导航大型文档集合
-  - 需要与现有工具和工作流程的轻松集成
+### 用户角色与场景
+| 角色 | 使用场景 | 关键需求 |
+|------|--------|---------|
+| **开发者** | 查看项目 README、API 文档 | 快速启动、离线可用、隐私保护 |
+| **技术文档作者** | 预览写作成果、测试文档结构 | 实时刷新、目录导航、内容搜索 |
+| **知识管理者** | 整合团队笔记、个人知识库 | 集中管理、可视化结构、简单部署 |
 
-### 2.3 外部系统交互
-- **命令行参数解析**：使用Clap库解析命令行参数。
-- **日志和跟踪**：使用Tracing和Tracing_subscriber框架进行日志记录和性能跟踪。
-- **异步运行时**：使用Tokio库实现异步任务处理。
-- **错误处理**：使用Anyhow和Thiserror库进行错误处理。
-- **Web服务**：使用Axum框架构建Web服务器，提供RESTful API。
-- **数据序列化**：使用Serde和Serde_json库进行数据序列化和反序列化。
-- **Markdown处理**：使用Pulldown_cmark库解析和渲染Markdown文档。
+### 外部系统交互
+```mermaid
+graph LR
+    A[Litho Book] --> B[操作系统文件系统]
+    A --> C[网络接口 TCP]
+    A --> D[默认浏览器]
+    
+    subgraph "外部系统"
+        B -->|读取文件元数据| A
+        C <--|HTTP 请求/响应|--> A
+        D <-->|打开 URL| A
+    end
+```
 
-### 2.4 系统边界定义
-- **包含组件**：
-  - 文档管理系统
-  - Web界面用于查看和交互文档
-  - 搜索和导航功能
-  - 错误处理和日志记录
-- **排除组件**：
-  - 操作系统
-  - 硬件
-  - 网络基础设施
+- **操作系统文件系统**：只读访问用户指定目录下的 Markdown 文件
+- **网络接口（TCP）**：绑定本地端口提供 HTTP 服务
+- **默认浏览器**：自动启动并访问服务地址
+
+### 系统边界定义
+#### 包含组件
+- ✅ CLI 参数解析器（Clap）
+- ✅ 文件系统扫描与文档树构建
+- ✅ Markdown 内容读取与元数据提取
+- ✅ Axum HTTP 服务与 REST API
+- ✅ HTML 模板渲染与前端交互
+- ✅ 错误统一处理与日志系统
+
+#### 排除组件
+- ❌ 文档编辑器（仅阅读模式）
+- ❌ Git 版本控制集成
+- ❌ 用户账户与权限系统
+- ❌ 云存储同步（如 Dropbox）
+- ❌ 数据库（SQLite 等）
+- ❌ 实时协作功能
+- ❌ 移动 App 或桌面打包版本
+- ❌ 插件系统或扩展机制
+
+> **边界说明**：Litho Book 是一个纯粹的本地文档阅读器，不涉及任何持久化修改、远程同步或用户认证功能。
+
+---
 
 ## 3. 容器视图 (Container View)
 
-### 3.1 领域模块划分
-- **命令行接口域**：
-  - 负责处理命令行参数，包括定义、解析、验证参数，提供服务器URL和绑定地址，检查当前进程的特权状态。
-  - 子模块：命令行参数解析子模块
-- **错误处理域**：
-  - 负责定义和处理系统中的错误。
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **文件系统域**：
-  - 负责管理和操作文档文件。
-  - 与文件系统交互，读取和写入Markdown文档。
-- **服务器域**：
-  - 负责启动和管理Web服务器。
-  - 使用Axum框架构建Web服务器，提供RESTful API用于文档管理和查询。
-
-### 3.2 领域模块架构
-```mermaid
-flowchart TD
-    subgraph Litho-Book System
-        direction TB
-        Main[main.rs]
-        CLI[cli.rs]
-        Error[error.rs]
-        FS[filesystem.rs]
-        Server[server.rs]
-
-        Main -->|依赖| CLI
-        Main -->|依赖| Error
-        Main -->|依赖| FS
-        Main -->|依赖| Server
-
-        CLI -->|使用| Clap
-        CLI -->|使用| Anyhow
-        Error -->|使用| Thiserror
-        Error -->|使用| std::io
-        Error -->|使用| Serde_json
-        Error -->|使用| Axum::http
-        Main -->|使用| Clap
-        Main -->|使用| Tracing
-        Main -->|使用| Tracing_subscriber
-        Main -->|使用| Tokio
-        Main -->|使用| Anyhow
-        Main -->|使用| Axum
-        Main -->|使用| Serde_json
-        Main -->|使用| Thiserror
-        Main -->|使用| Serde
-        Main -->|使用| Pulldown_cmark
-    end
-
-    subgraph External Libraries
-        Clap[Clap]
-        Tracing[Tracing]
-        Tracing_subscriber[Tracing_subscriber]
-        Tokio[Tokio]
-        Anyhow[Anyhow]
-        Axum[Axum]
-        Serde_json[Serde_json]
-        Thiserror[Thiserror]
-        Serde[Serde]
-        Pulldown_cmark[Pulldown_cmark]
-    end
-
-    style Main fill:#f9f,stroke:#333
-    style CLI fill:#bbf,stroke:#333
-    style Error fill:#bfb,stroke:#333
-    style FS fill:#bfb,stroke:#333
-    style Server fill:#bfb,stroke:#333
-    style External Libraries fill:#eee,stroke:#333
-```
-
-### 3.3 存储设计
-- **文件系统存储**：
-  - 系统使用文件系统存储Markdown文档，通过filesystem.rs模块进行管理和操作。
-  - 文档存储路径和结构由命令行参数配置决定。
-
-### 3.4 领域模块间通信
-- **命令行接口域与错误处理域**：
-  - 命令行接口域依赖错误处理域来处理命令行参数解析过程中可能出现的错误。
-- **命令行接口域与服务器域**：
-  - 命令行接口域提供服务器URL和绑定地址，服务器域根据这些参数配置启动服务器。
-- **服务器域与文件系统域**：
-  - 服务器域通过文件系统域读取和写入Markdown文档，提供RESTful API用于文档管理和查询。
-
-## 4. 组件视图 (Component View)
-
-### 4.1 核心功能组件
-- **main.rs**：
-  - 系统的入口点，负责初始化和协调各个模块的工作。
-  - 依赖其他模块（cli.rs, error.rs, filesystem.rs, server.rs）和外部库。
-- **cli.rs**：
-  - 命令行接口域，负责解析和验证命令行参数。
-  - 使用Clap库解析命令行参数，并提供服务器URL和绑定地址。
-- **error.rs**：
-  - 错误处理域，负责定义和处理系统中的错误。
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **filesystem.rs**：
-  - 文件系统域，负责管理和操作文档文件。
-  - 与文件系统交互，读取和写入Markdown文档。
-- **server.rs**：
-  - 服务器域，负责启动和管理Web服务器。
-  - 使用Axum框架构建Web服务器，提供RESTful API用于文档管理和查询。
-
-### 4.2 技术支撑组件
-- **Clap**：
-  - 命令行参数解析库，用于解析和验证命令行参数。
-- **Tracing和Tracing_subscriber**：
-  - 日志和跟踪框架，用于记录系统日志和性能跟踪。
-- **Tokio**：
-  - 异步运行时，用于实现异步任务处理。
-- **Anyhow和Thiserror**：
-  - 错误处理库，用于定义和处理系统中的错误。
-- **Axum**：
-  - Web框架，用于构建Web服务器和提供RESTful API。
-- **Serde和Serde_json**：
-  - 序列化和反序列化库，用于数据序列化和反序列化。
-- **Pulldown_cmark**：
-  - Markdown解析和渲染库，用于解析和渲染Markdown文档。
-
-### 4.3 组件职责划分
-- **main.rs**：
-  - 初始化系统，协调各个模块的工作。
-  - 依赖其他模块和外部库。
-- **cli.rs**：
-  - 解析和验证命令行参数。
-  - 提供服务器URL和绑定地址。
-  - 依赖错误处理域来处理命令行参数解析过程中可能出现的错误。
-- **error.rs**：
-  - 定义和处理系统中的错误。
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **filesystem.rs**：
-  - 管理和操作文档文件。
-  - 与文件系统交互，读取和写入Markdown文档。
-- **server.rs**：
-  - 启动和管理Web服务器。
-  - 使用Axum框架构建Web服务器，提供RESTful API用于文档管理和查询。
-
-### 4.4 组件交互关系
-```mermaid
-flowchart TD
-    subgraph Litho-Book System
-        direction TB
-        Main[main.rs]
-        CLI[cli.rs]
-        Error[error.rs]
-        FS[filesystem.rs]
-        Server[server.rs]
-
-        Main -->|依赖| CLI
-        Main -->|依赖| Error
-        Main -->|依赖| FS
-        Main -->|依赖| Server
-
-        CLI -->|使用| Clap
-        CLI -->|使用| Anyhow
-        Error -->|使用| Thiserror
-        Error -->|使用| std::io
-        Error -->|使用| Serde_json
-        Error -->|使用| Axum::http
-        Main -->|使用| Clap
-        Main -->|使用| Tracing
-        Main -->|使用| Tracing_subscriber
-        Main -->|使用| Tokio
-        Main -->|使用| Anyhow
-        Main -->|使用| Axum
-        Main -->|使用| Serde_json
-        Main -->|使用| Thiserror
-        Main -->|使用| Serde
-        Main -->|使用| Pulldown_cmark
-    end
-
-    subgraph External Libraries
-        Clap[Clap]
-        Tracing[Tracing]
-        Tracing_subscriber[Tracing_subscriber]
-        Tokio[Tokio]
-        Anyhow[Anyhow]
-        Axum[Axum]
-        Serde_json[Serde_json]
-        Thiserror[Thiserror]
-        Serde[Serde]
-        Pulldown_cmark[Pulldown_cmark]
-    end
-
-    style Main fill:#f9f,stroke:#333
-    style CLI fill:#bbf,stroke:#333
-    style Error fill:#bfb,stroke:#333
-    style FS fill:#bfb,stroke:#333
-    style Server fill:#bfb,stroke:#333
-    style External Libraries fill:#eee,stroke:#333
-```
-
-## 5. 关键流程 (Key Processes)
-
-### 5.1 核心功能流程
-- **应用程序启动流程**：
-  - 用户通过命令行启动应用程序。
-  - 系统解析命令行参数，验证参数有效性。
-  - 根据参数配置启动服务器。
-  - 服务器提供文档管理和交互功能。
-  - 用户通过Web界面查看和交互文档。
-  - 系统处理请求并返回响应。
+### 领域模块划分
+根据业务关注点，系统划分为四个核心领域模块：
 
 ```mermaid
 graph TD
-    A[启动应用程序] --> B[解析命令行参数]
-    B --> C[验证参数有效性]
-    C --> D[配置并启动服务器]
-    D --> E[提供文档管理和交互功能]
-    E --> F[用户通过Web界面查看和交互文档]
-    F --> G[系统处理请求并返回响应]
+    CLI[命令行接口域] --> FS[文件系统域]
+    CLI --> Server[服务器域]
+    Server --> FS
+    Server --> Error[通用错误域]
+    FS --> Error
+    CLI --> Error
+    
+    style CLI fill:#4B9CD3,stroke:#333
+    style FS fill:#F7CA44,stroke:#333
+    style Server fill:#8CC152,stroke:#333
+    style Error fill:#D770AD,stroke:#333
 ```
 
-### 5.2 技术处理流程
-- **命令行参数解析**：
-  - 用户通过命令行启动应用程序。
-  - 系统解析命令行参数，验证参数有效性。
-  - 根据参数配置启动服务器。
-- **错误处理**：
-  - 在命令行参数解析和文件系统操作过程中，系统会使用error.rs模块定义和处理错误。
-- **文件系统操作**：
-  - 系统通过filesystem.rs模块与文件系统交互，读取和写入Markdown文档。
-- **Web服务器管理**：
-  - 系统通过server.rs模块启动和管理Web服务器，提供RESTful API用于文档管理和查询。
+| 模块 | 类型 | 职责 |
+|------|-----|------|
+| **命令行接口域** | 用户交互 | 参数解析、路径验证、服务启动协调 |
+| **文件系统域** | 数据处理 | 扫描目录、构建文档树、读取内容 |
+| **服务器域** | 后端服务 | HTTP 路由、状态管理、响应序列化 |
+| **通用错误域** | 支撑服务 | 统一错误定义、HTTP 映射转换 |
 
-### 5.3 数据流转路径
-- **命令行参数流转**：
-  - 用户输入的命令行参数通过cli.rs模块解析和验证。
-  - 验证后的参数传递给main.rs模块，用于配置和启动服务器。
-- **文档数据流转**：
-  - 用户通过Web界面提交的文档数据通过server.rs模块接收。
-  - 文档数据通过filesystem.rs模块存储到文件系统中。
-  - 文档数据通过filesystem.rs模块读取，并通过server.rs模块返回给用户。
+### 存储设计
+系统采用**无数据库设计**，所有数据来源于本地文件系统：
 
-### 5.4 异常处理机制
-- **错误定义和处理**：
-  - 系统使用error.rs模块定义和处理错误。
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **错误传播和处理**：
-  - 在命令行参数解析和文件系统操作过程中，系统会使用error.rs模块定义和处理错误。
-  - 错误信息通过JSON序列化和反序列化，便于传输和处理。
+- **主存储**：用户指定的 Markdown 文件目录
+- **内存缓存**：
+  - `DocumentTree`: 预构建的文档结构树
+  - `file_map`: 路径到实际文件的映射表
+- **临时状态**：`AppState` 中共享的应用状态
+
+> ⚠️ **注意**：所有数据均为只读，不会对原始文件进行任何修改。
+
+### 领域模块间通信
+| 依赖方向 | 通信方式 | 示例 |
+|---------|----------|------|
+| CLI → 文件系统 | 函数调用 `DocumentTree::new()` | 构建文档树 |
+| CLI → 服务器 | 函数调用 `create_router()` | 创建 HTTP 应用 |
+| 服务器 → 文件系统 | 方法调用 `get_file_content()` | 获取文件内容 |
+| 所有模块 → 错误域 | 错误传播 `anyhow::Result<T>` | 统一错误处理 |
+
+关键通信机制：
+- **共享状态**：通过 `AppState` 在多个请求间共享 `DocumentTree`
+- **错误链**：使用 `#[from]` 宏实现底层错误向上聚合
+- **异步协调**：Tokio 运行时管理并发请求处理
+
+---
+
+## 4. 组件视图 (Component View)
+
+### 核心功能组件
+#### 命令行接口域
+```mermaid
+classDiagram
+    class Args {
+        +docs_dir: PathBuf
+        +port: u16  
+        +host: String
+        +open: bool
+        +validate() Result~()
+        +server_url() String
+        +bind_address() String
+    }
+    
+    class Main {
+        +main() -> anyhow::Result~()>
+        +init_logging(verbose: bool)
+        +print_banner()
+        +open_browser(url: &str) -> Result~()>
+        +format_bytes(bytes: u64) -> String
+    }
+    
+    Main --> Args : 使用
+```
+
+- **Args**: Clap 定义的参数结构体，包含文档目录、端口、主机等配置
+- **Main**: 主函数入口，负责初始化、流程编排和错误退出
+
+#### 文件系统域
+```mermaid
+classDiagram
+    class DocumentTree {
+        +root: FileNode
+        +file_map: HashMap<String, PathBuf>
+        +stats: TreeStats
+        +new(docs_dir: &Path) Result~Self>
+        +get_file_content(path: &str) Result~String>
+        +render_markdown(content: &str) String
+        +search_files(query: &str) Vec<&String>
+        +get_stats() &TreeStats
+    }
+    
+    class FileNode {
+        +name: String
+        +path: String  
+        +is_file: bool
+        +children: Vec<FileNode>
+        +size: Option<u64>
+        +modified: Option<String>
+    }
+    
+    class TreeStats {
+        +total_files: usize
+        +total_dirs: usize
+        +total_size: u64
+    }
+    
+    DocumentTree --> FileNode
+    DocumentTree --> TreeStats
+```
+
+- **DocumentTree**: 核心数据结构，代表整个文档目录的树形表示
+- **FileNode**: 树节点，包含名称、路径、子节点及元数据
+- **file_map**: 哈希表实现 O(1) 路径查找性能
+
+#### 服务器域
+```mermaid
+classDiagram
+    class AppState {
+        +doc_tree: DocumentTree
+        +docs_path: String
+    }
+    
+    class Router {
+        +create_router(doc_tree: DocumentTree, docs_path: String) Router
+    }
+    
+    class Handlers {
+        +index_handler()
+        +get_file_handler()
+        +get_tree_handler() 
+        +search_handler()
+        +stats_handler()
+        +health_handler()
+    }
+    
+    Router --> AppState
+    Router --> Handlers
+```
+
+- **AppState**: Axum 共享状态，确保多请求访问同一份数据
+- **路由处理器**：每个 API 端点对应一个异步处理函数
+- **CORS Layer**: 允许任意来源访问（本地服务适用）
+
+#### 通用错误域
+```mermaid
+classDiagram
+    class LithoBookError {
+        +Io(std::io::Error)
+        +Json(serde_json::Error)
+        +FileNotFound{ path: String }
+        +InvalidPath{ path: String }
+        +DirectoryScan(String)
+        +Server(String)
+        +Config(String)
+    }
+    
+    class Result~T~ {
+        <<type alias>>
+        std::result::Result<T, LithoBookError>
+    }
+    
+    LithoBookError --> "From" --> axum::http::StatusCode
+    Result~T~ ..> LithoBookError
+```
+
+- **枚举式错误设计**：覆盖所有可能的错误场景
+- **自动转换**：`From<LithoBookError> for StatusCode` 实现 HTTP 映射
+
+---
+
+## 5. 关键流程 (Key Processes)
+
+### 核心功能流程：文档浏览启动流程
+```mermaid
+graph TD
+    A[用户执行命令: litho-book <path> --port <port>] --> B[CLI解析参数并验证路径]
+    B --> C[文件系统模块扫描目录]
+    C --> D[递归构建DocumentTree结构]
+    D --> E[服务器模块创建Axum应用]
+    E --> F[绑定路由处理器与共享状态]
+    F --> G[启动TCP监听服务]
+    G --> H[自动打开默认浏览器访问界面]
+    H --> I[用户在浏览器中查看文档]
+```
+
+**详细步骤**：
+1. `cli::Args::parse()` 解析命令行参数
+2. `args.validate()` 验证目录存在且为有效路径
+3. `DocumentTree::new()` 扫描目录并构建树结构
+4. `server::create_router()` 初始化 Axum 应用
+5. `TcpListener::bind()` 监听指定端口
+6. `open_browser()` 调用系统命令打开浏览器
+7. 用户通过 `/api/tree` 加载文档结构
+
+### 技术处理流程：文档内容查询流程
+```mermaid
+graph TD
+    A[用户在浏览器访问 /file/<path> 或 /search?q=... ] --> B[服务器接收HTTP请求并匹配路由]
+    B --> C[调用get_file_handler或search_handler]
+    C --> D[文件系统模块根据路径查找文件]
+    D --> E[读取Markdown内容并提取元数据]
+    E --> F[渲染Markdown为HTML或序列化为JSON]
+    F --> G[返回HTTP响应给浏览器]
+    G --> H[前端展示文档内容或搜索结果]
+```
+
+**性能优化点**：
+- 路径查找使用 `HashMap` 实现 O(1) 查询
+- Markdown 渲染在请求时动态执行（避免预渲染开销）
+- 元数据从文件系统实时获取保证准确性
+
+### 异常处理机制：系统错误处理流程
+```mermaid
+graph TD
+    A[任意模块出现错误：文件未找到、IO失败等] --> B[抛出LithoBookError]
+    B --> C[通过thiserror宏封装底层错误]
+    C --> D[服务器模块实现From<LithoBookError> for StatusCode]
+    D --> E[转换为对应HTTP状态码（404, 500等）]
+    E --> F[生成标准化错误响应]
+    F --> G[返回用户可读的错误页面或JSON]
+```
+
+**错误分类与映射**：
+| 错误类型 | HTTP 状态码 | 场景示例 |
+|---------|------------|---------|
+| `FileNotFound` | 404 Not Found | 请求不存在的文件 |
+| `InvalidPath` | 400 Bad Request | 路径格式非法 |
+| `Io` / `Json` | 500 Internal Server Error | 文件读取失败、序列化异常 |
+| `Config` | 400 Bad Request | 配置参数无效 |
+
+---
 
 ## 6. 技术实现 (Technical Implementation)
 
-### 6.1 核心模块实现
-- **main.rs**：
-  - 系统的入口点，负责初始化和协调各个模块的工作。
-  - 依赖其他模块（cli.rs, error.rs, filesystem.rs, server.rs）和外部库。
-- **cli.rs**：
-  - 命令行接口域，负责解析和验证命令行参数。
-  - 使用Clap库解析命令行参数，并提供服务器URL和绑定地址。
-- **error.rs**：
-  - 错误处理域，负责定义和处理系统中的错误。
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **filesystem.rs**：
-  - 文件系统域，负责管理和操作文档文件。
-  - 与文件系统交互，读取和写入Markdown文档。
-- **server.rs**：
-  - 服务器域，负责启动和管理Web服务器。
-  - 使用Axum框架构建Web服务器，提供RESTful API用于文档管理和查询。
+### 核心模块实现
 
-### 6.2 关键算法设计
-- **命令行参数解析**：
-  - 使用Clap库解析命令行参数，定义并解析命令行参数，验证参数有效性。
-- **错误处理**：
-  - 使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化。
-- **文件系统操作**：
-  - 使用标准文件系统API读取和写入Markdown文档。
-- **Web服务器管理**：
-  - 使用Axum框架构建Web服务器，提供RESTful API用于文档管理和查询。
+#### 文档树构建算法
+```rust
+fn build_tree(
+    current_path: &Path,
+    base_path: &Path,
+    file_map: &mut HashMap<String, PathBuf>,
+    stats: &mut TreeStats,
+) -> anyhow::Result<FileNode> {
+    // 1. 获取文件名和相对路径
+    let name = current_path.file_name().unwrap().to_string_lossy();
+    let relative_path = current_path.strip_prefix(base_path).unwrap().to_str().replace('\\', '/');
+    
+    // 2. 处理文件节点
+    if current_path.is_file() {
+        if is_markdown_file(current_path) {
+            file_map.insert(relative_path.clone(), current_path.to_path_buf());
+            // 记录统计信息
+            stats.total_files += 1;
+            stats.total_size += metadata.len();
+        }
+        return Ok(FileNode { /* ... */ });
+    }
+    
+    // 3. 处理目录节点（递归）
+    let mut children = Vec::new();
+    let mut entries: Vec<_> = std::fs::read_dir(current_path)?.collect();
+    
+    // 4. 排序：目录优先，同类型按名称排序
+    entries.sort_by(|a, b| {
+        let a_is_dir = a.path().is_dir();
+        let b_is_dir = b.path().is_dir();
+        match (a_is_dir, b_is_dir) {
+            (true, false) => Ordering::Less,
+            (false, true) => Ordering::Greater,
+            _ => a.file_name().cmp(&b.file_name()),
+        }
+    });
+    
+    // 5. 递归构建子树
+    for entry in entries {
+        let child = Self::build_tree(&entry.path(), base_path, file_map, stats)?;
+        children.push(child);
+    }
+    
+    Ok(FileNode { name, path: relative_path, is_file: false, children, .. })
+}
+```
 
-### 6.3 数据结构设计
-- **命令行参数结构**：
-  - 定义命令行参数的数据结构，包括服务器URL和绑定地址等。
-- **错误类型结构**：
-  - 使用Thiserror库派生错误类型，定义系统中的各种错误类型。
-- **文档数据结构**：
-  - 定义Markdown文档的数据结构，包括文档内容、元数据等。
-- **API请求和响应结构**：
-  - 定义RESTful API的请求和响应数据结构。
+**关键特性**：
+- **递归深度优先遍历**
+- **智能排序策略**：目录优先 + 字母顺序
+- **隐藏文件过滤**：跳过以 `.` 开头的文件
+- **非 Markdown 过滤**：仅保留 `.md` 文件
 
-### 6.4 性能优化策略
-- **异步处理**：
-  - 使用Tokio库实现异步任务处理，提高系统的并发处理能力。
-- **缓存机制**：
-  - 实现文档缓存机制，减少文件系统的读写操作。
-- **并行处理**：
-  - 使用多线程或多进程处理高并发请求，提高系统的响应速度。
+#### 响应序列化实现
+```rust
+async fn get_file_handler(
+    Query(params): Query<FileQuery>,
+    State(state): State<AppState>,
+) -> Result<Json<FileResponse>, StatusCode> {
+    let file_path = params.file.ok_or(StatusCode::BAD_REQUEST)?;
+    
+    // 从内存映射中查找文件
+    let content = state.doc_tree.get_file_content(&file_path)?;
+    let html = state.doc_tree.render_markdown(&content);
+    
+    // 提取元数据
+    let file_info = state.file_map.get(&file_path).and_then(|path| {
+        std::fs::metadata(path).ok().map(|m| (m.len(), format_modified_time(m.modified())))
+    });
+    
+    // 构造响应对象
+    let response = FileResponse {
+        content,
+        html,
+        path: file_path,
+        size: file_info.as_ref().map(|(s, _)| *s),
+        modified: file_info.and_then(|(_, m)| m),
+    };
+    
+    Ok(Json(response))
+}
+```
+
+使用 Serde 自动序列化为 JSON，前端可直接消费。
+
+### 数据结构设计
+#### FileNode 设计考量
+```rust
+#[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct FileNode {
+    pub name: String,
+    pub path: String,
+    pub is_file: bool,
+    pub children: Vec<FileNode>,
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub size: Option<u64>,
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub modified: Option<String>,
+}
+```
+
+- **条件序列化**：`skip_serializing_if` 减少 JSON 体积
+- **克隆友好**：实现 `Clone` 便于状态共享
+- **跨平台路径**：使用 `/` 分隔符兼容 Windows 和 Unix
+
+### 性能优化策略
+| 优化点 | 实现方式 | 效果 |
+|-------|---------|------|
+| **启动速度** | 预构建文档树 | 首次加载后无需重复扫描 |
+| **查询性能** | HashMap 路径索引 | O(1) 文件查找 |
+| **内存效率** | 共享 DocumentTree | 避免多请求复制数据 |
+| **网络传输** | 条件序列化 | 减少 JSON 响应大小 |
+| **并发处理** | Tokio 异步运行时 | 高并发请求支持 |
+
+---
 
 ## 7. 部署架构 (Deployment Architecture)
 
-### 7.1 运行环境要求
-- **操作系统**：
-  - 支持Linux、macOS和Windows操作系统。
-- **硬件要求**：
-  - 至少2GB内存，推荐4GB或更高。
-  - 至少2个CPU核心，推荐4个或更高。
-- **依赖库**：
-  - 需要安装Rust编译器和必要的依赖库。
+### 运行环境要求
+| 项目 | 要求 |
+|------|------|
+| **操作系统** | Windows, macOS, Linux |
+| **Rust 版本** | 1.70+ （推荐稳定版） |
+| **磁盘空间** | 可执行文件约 5-10MB + 文档存储空间 |
+| **内存** | ≥ 128MB RAM（取决于文档规模） |
+| **端口** | 默认 3000，可自定义 1024-65535 |
 
-### 7.2 部署拓扑结构
-- **单机部署**：
-  - 系统可以部署在单台服务器上，适用于小型或中型文档管理需求。
-- **集群部署**：
-  - 系统可以部署在多台服务器上，通过负载均衡实现高可用和高性能。
-
+### 部署拓扑结构
 ```mermaid
-flowchart TD
-    subgraph Single Server Deployment
-        direction TB
-        Server1[Server 1]
-        DB1[Database 1]
-        Server1 -->|Connects to| DB1
+graph LR
+    User[终端用户] --> Browser[(浏览器)]
+    Browser --> Service[Litho Book 服务]
+    Service --> Docs[(本地文档目录)]
+    
+    subgraph "本地机器"
+        Browser
+        Service
+        Docs
     end
-
-    subgraph Cluster Deployment
-        direction TB
-        LB[Load Balancer]
-        Server2[Server 2]
-        Server3[Server 3]
-        DB2[Database 2]
-        DB3[Database 3]
-        LB --> Server2
-        LB --> Server3
-        Server2 -->|Read/Write| DB2
-        Server3 -->|Read/Write| DB3
-    end
-
-    style Single Server Deployment fill:#f9f,stroke:#333
-    style Cluster Deployment fill:#bbf,stroke:#333
+    
+    style Service stroke:#f96,stroke-width:2px
 ```
 
-### 7.3 扩展性设计
-- **水平扩展**：
-  - 系统可以通过增加服务器节点实现水平扩展，提高系统的并发处理能力。
-- **垂直扩展**：
-  - 系统可以通过增加服务器资源（如CPU、内存）实现垂直扩展，提高单台服务器的处理能力。
-- **模块化设计**：
-  - 系统采用模块化设计，便于添加新功能或替换现有模块。
+- 单进程运行，无外部依赖
+- 服务绑定 `127.0.0.1` 默认仅本机访问
+- 可通过 `--host 0.0.0.0` 开放局域网访问
 
-### 7.4 监控与运维
-- **日志记录**：
-  - 使用Tracing和Tracing_subscriber框架进行日志记录和性能跟踪。
-- **性能监控**：
-  - 使用性能监控工具监控系统的性能指标，如CPU使用率、内存使用率、请求响应时间等。
-- **健康检查**：
-  - 实现健康检查接口，定期检查系统的健康状态。
-- **自动化部署**：
-  - 使用自动化部署工具（如Ansible、Puppet等）实现系统的自动化部署和配置管理。
+### 扩展性设计
+#### 水平扩展
+- ❌ 不支持多实例负载均衡（单机工具定位）
+- ✅ 可在同一台机器运行多个实例于不同端口
 
-## 8. 架构洞察
+#### 垂直扩展
+- ✅ 支持超大文档库（内存足够即可）
+- ✅ 动态搜索性能随 SSD 提升而改善
+- ✅ 异步架构支持高并发浏览请求
 
-### 8.1 扩展性设计
-- **模块化架构**：
-  - 系统采用模块化设计，便于添加新功能或替换现有模块。
-- **水平扩展**：
-  - 系统可以通过增加服务器节点实现水平扩展，提高系统的并发处理能力。
-- **垂直扩展**：
-  - 系统可以通过增加服务器资源（如CPU、内存）实现垂直扩展，提高单台服务器的处理能力。
+#### 扩展点建议
+1. **插件系统**：允许自定义渲染器或元数据提取器
+2. **缓存层**：增加 Redis 缓存频繁访问的内容
+3. **身份验证**：添加 Basic Auth 保护私人文档
+4. **导出功能**：支持 PDF/HTML 打包下载
 
-### 8.2 性能考虑
-- **异步处理**：
-  - 使用Tokio库实现异步任务处理，提高系统的并发处理能力。
-- **缓存机制**：
-  - 实现文档缓存机制，减少文件系统的读写操作。
-- **并行处理**：
-  - 使用多线程或多进程处理高并发请求，提高系统的响应速度。
+### 监控与运维
+#### 内建监控能力
+- **健康检查**：`/health` 端点返回服务状态
+- **统计信息**：`/api/stats` 提供文档库指标
+- **结构化日志**：Tracing 输出调试信息
 
-### 8.3 安全性设计
-- **错误处理**：
-  - 系统使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化，确保错误处理的清晰和一致性。
-- **数据验证**：
-  - 在命令行参数解析和文件系统操作过程中，系统会进行数据验证，确保数据的正确性和安全性。
-- **权限管理**：
-  - 系统检查当前进程的特权状态，确保系统的安全性。
+#### 运维指导
+```bash
+# 启动服务（基础）
+litho-book ./docs --port 3000
 
-## 9. 实用性
+# 启动服务（高级）
+litho-book ./docs \
+  --port 8080 \
+  --host 0.0.0.0 \
+  --open \
+  --verbose
 
-### 9.1 开发指导
-- **模块开发**：
-  - 开发团队应按照模块化设计原则开发各个模块，确保模块的高内聚和低耦合。
-- **接口定义**：
-  - 开发团队应定义清晰的模块接口和数据结构，便于模块之间的交互。
-- **错误处理**：
-  - 开发团队应使用Thiserror库派生错误类型，并使用Serde_json进行JSON序列化和反序列化，确保错误处理的清晰和一致性。
+# 查看帮助
+litho-book --help
+```
 
-### 9.2 运维指导
-- **部署策略**：
-  - 运维团队应根据系统的扩展性设计，选择合适的部署策略（如单机部署或集群部署）。
-- **监控策略**：
-  - 运维团队应使用性能监控工具监控系统的性能指标，确保系统的稳定性和可靠性。
-- **健康检查**：
-  - 运维团队应定期检查系统的健康状态，确保系统的正常运行。
+**最佳实践**：
+- 将常用命令写入 shell 别名或脚本
+- 使用 `--verbose` 调试启动问题
+- 定期清理文档目录避免性能下降
+- 避免在机械硬盘上处理超大文档库
 
-### 9.3 决策支持
-- **技术选型**：
-  - 系统采用Rust语言和Axum框架，具有高性能和可扩展性，适用于文档管理系统的开发。
-- **架构设计**：
-  - 系统采用模块化设计，便于添加新功能或替换现有模块，满足业务需求的变化。
-- **性能优化**：
-  - 系统通过异步处理、缓存机制和并行处理等策略，提高系统的性能和响应速度。
+---
 
-### 9.4 知识传承
-- **架构文档**：
-  - 系统架构文档提供了系统的整体架构设计、模块划分、组件交互关系等信息，便于新团队成员快速理解系统架构。
-- **代码注释**：
-  - 代码中应包含详细的注释，说明代码的功能、实现细节和使用方式，便于新团队成员理解代码。
-- **开发指南**：
-  - 开发指南提供了系统的开发规范、编码规范、测试规范等信息，便于新团队成员遵循规范进行开发。
+## 架构洞察与决策支持
 
-通过以上架构文档，开发团队和运维团队可以清晰地理解系统的架构设计、技术实现和运维策略，确保系统的高效、可靠和可扩展性。
+### 扩展性设计思考
+当前架构已具备良好的垂直扩展能力，未来可通过以下方式增强：
+- **懒加载机制**：对于超大目录，改为按需扫描子目录
+- **增量更新**：监听文件变化，动态更新 `DocumentTree`
+- **分布式部署**：改造为客户端-服务器模式，支持远程文档库
+
+### 性能考虑
+**潜在瓶颈**：
+1. **初始扫描时间**：大型文档库首次启动较慢
+2. **内存占用**：完整文档树驻留内存
+3. **全文搜索性能**：线性遍历所有文件
+
+**优化建议**：
+- 引入 SQLite 全文索引加速搜索
+- 实现 LRU 缓存热门文件内容
+- 添加进度指示器提升用户体验
+
+### 安全性设计
+**现有防护**：
+- 默认绑定 `127.0.0.1` 限制外网访问
+- 严格的路径验证防止目录穿越
+- 统一错误处理避免信息泄露
+
+**改进建议**：
+- 添加 CSP 头防止 XSS 攻击
+- 支持 HTTPS 本地证书加密传输
+- 实现访问令牌认证机制
+
+### 开发与运维指导
+#### 开发者指南
+- 新增 API 需遵循 `axum::routing::get()` 模式
+- 错误应继承 `LithoBookError` 枚举
+- 共享状态必须通过 `State<AppState>` 注入
+
+#### 运维建议
+- 生产环境建议使用 systemd/pm2 管理进程
+- 可结合 nginx 反向代理实现域名访问
+- 日志级别设置为 `info` 平衡可观测性与性能
+
+本架构文档为 Litho Book 提供了全面的技术蓝图，既满足当前轻量级本地文档阅读的需求，也为未来的演进留下了合理的设计空间。
