--- a/litho.docs/1、项目概述.md
+++ b/litho.docs/1、项目概述.md
@@ -112,11 +112,11 @@ Litho Book 是一个**完全孤立的本地系统**，其设计目标是**零外
 
 ```mermaid
 graph TD
-    A[用户 - 开发者] -->|启动命令<br>litho-book /path/to/docs| B[Litho Book]
-    C[用户 - 知识工作者] -->|访问 URL<br>http://localhost:8080| B
-    B -->|读取 .md 文件<br>构建内存树| D[本地文件系统<br>(OS)]
-    B -->|返回 HTML/JSON<br>渲染文档与搜索结果| A
-    B -->|返回 HTML/JSON<br>渲染文档与搜索结果| C
+    A[用户开发者] -->|"启动命令<br>litho-book /path/to/docs"| B[Litho Book]
+    C[用户知识工作者] -->|"访问 URL<br>http://localhost:8080"| B
+    B -->|"读取 .md 文件<br>构建内存树"| D[本地文件系统]
+    B -->|"返回 HTML/JSON<br>渲染文档与搜索结果"| A
+    B -->|"返回 HTML/JSON<br>渲染文档与搜索结果"| C
 
     style B fill:#f9f,stroke:#333
     style D fill:#bbf,stroke:#333
