--- a/litho.docs/2、架构概览.md
+++ b/litho.docs/2、架构概览.md
@@ -293,36 +293,36 @@ graph TD
 graph TD
     %% ==================== 组件视图：Litho Book ====================
     subgraph "主程序协调器"
-        MAIN[main.rs]
+        MAIN[main]
     end
 
     subgraph "命令行解析域"
-        CLI[Args::parse()]
+        CLI[解析命令行参数]
         VALID[参数校验]
     end
 
     subgraph "错误处理域"
-        ERR[LithoBookError]
-        ERR_LOG[tracing::error!]
+        ERR[错误处理]
+        ERR_LOG[记录错误]
     end
 
     subgraph "文件系统域"
-        FS[DocumentTree::from_path()]
-        TREE[DocumentTree]
-        SEARCH[DocumentTree::search()]
-        RENDER[render_markdown_to_html()]
-        SCAN[walkdir::WalkDir]
-        FRONTMATTER[extract_frontmatter()]
+        FS[从路径创建文档树]
+        TREE[文档树]
+        SEARCH[搜索文档树]
+        RENDER[渲染标记文本]
+        SCAN[扫描目录]
+        FRONTMATTER[提取前置元数据]
     end
 
     subgraph "HTTP服务域"
-        ROUTER[create_router()]
-        APPSTATE[AppState::new()]
-        ROOT[root()]
-        SEARCH_API[search()]
-        GET_FILE[get_file()]
-        RENDER_HTML[render_markdown()]
-        INJECT[inject_template()]
+        ROUTER[创建路由]
+        APPSTATE[应用状态]
+        ROOT[根路由]
+        SEARCH_API[搜索API]
+        GET_FILE[获取文件]
+        RENDER_HTML[渲染HTML]
+        INJECT[注入模板]
     end
 
     %% ==================== 依赖关系 ====================
