--- a/litho.docs/4、深入探索/命令行解析域.md
+++ b/litho.docs/4、深入探索/命令行解析域.md
@@ -150,21 +150,19 @@ sequenceDiagram
     participant User
     participant CLI
     participant Validator
-    participant Error
     participant FS
 
-    User->>CLI: 执行 `litho-book ./notes --port 8081 --open-browser`
-    CLI->>Validator: 调用 Args::parse()
-    Validator->>Validator: 解析为 Args { directory: ./notes, port: 8081, ... }
-    Validator->>Validator: 执行 validate() 校验
-    Validator->>Validator: 检查 ./notes 是否存在 → ✅
-    Validator->>Validator: 检查 8081 是否合法 → ✅
-    Validator->>Validator: 检查是否为 root → ❌（非特权）
-    Validator-->>CLI: 返回 Ok(Args)
-    CLI->>Error: 无错误，继续
-    CLI->>FS: 传递 directory = ./notes
-    FS->>FS: 构建 DocumentTree
-    ...
+    User->>CLI: 执行命令
+    CLI->>Validator: 调用参数解析
+    Validator->>Validator: 解析参数
+    Validator->>Validator: 执行校验
+    Validator->>Validator: 检查目录存在
+    Validator->>Validator: 检查端口合法
+    Validator->>Validator: 检查权限
+    Validator->>CLI: 返回解析结果
+    CLI->>CLI: 无错误继续
+    CLI->>FS: 传递目录参数
+    FS->>FS: 构建文档树
 ```
 
 #### 3.2 错误处理流程
