--- a/litho.docs/3、工作流程.md
+++ b/litho.docs/3、工作流程.md
@@ -21,22 +21,22 @@
 ```mermaid
 graph TD
     A[开始扫描根目录] --> B[递归遍历子目录]
-    B --> C{是否为 .md 文件?}
-    C -- 是 --> D[读取文件内容]
-    D --> E[提取 Frontmatter（YAML）]
-    E --> F[解析标题、作者、日期]
+    B --> C{是否为MD文件}
+    C -- "是" --> D[读取文件内容]
+    D --> E[提取Frontmatter]
+    E --> F[解析标题作者日期]
     F --> G[提取纯文本内容]
     G --> H[分词并构建倒排索引]
-    H --> I[计算文件权重：标题匹配 > 文件名 > 内容]
-    I --> J[创建 FileNode 实例]
+    H --> I[计算文件权重]
+    I --> J[创建FileNode实例]
     J --> K[插入树结构]
-    K --> L[建立路径映射: /path/to/file.md → FileNode]
-    C -- 否 --> M[跳过]
-    M --> N{是否为目录?}
-    N -- 是 --> B
-    N -- 否 --> M
-    L --> O[构建全文搜索索引: term → [file_id, position, score]]
-    O --> P[返回 DocumentTree]
+    K --> L[建立路径映射]
+    C -- "否" --> M[跳过]
+    M --> N{是否为目录}
+    N -- "是" --> B
+    N -- "否" --> M
+    L --> O[构建全文搜索索引]
+    O --> P[返回DocumentTree]
 ```
 
 **关键技术细节**：
