Update dependencies and implement streaming chat API
Add async-stream and futures for stream processing Update windows-sys to
0.61.1 Implement streaming chat API with SSE (Server-Sent Events) Add
cursor animation for streaming responses Update frontend to handle
streaming responses Remove legacy search_files method Clean up error.rs
formatting Fix markdown rendering formatting Update documentation
formatting

--- a/docs/2、架构概览.md
+++ b/docs/2、架构概览.md
@@ -431,6 +431,7 @@ sequenceDiagram
         HTTP->>HTTP: 调用 serde_json::to_string() 序列化树为 JSON
         HTTP->>HTTP: 注入 HTML 模板，生成完整页面
         HTTP-->>Browser: 返回 200 OK + HTML
+    end
 ```
 
 ### 核心功能流程：文档浏览与搜索
@@ -450,7 +451,7 @@ sequenceDiagram
     FS-->>HTTP: 返回 Vec<SearchResult> { id, path, title, snippets, score }
     HTTP->>HTTP: 使用 serde_json::to_string() 序列化为 JSON
     HTTP-->>Browser: 返回 200 OK + { results: [...] }
-    
+
     alt 请求 /file/docs/intro.md
         Browser->>HTTP: GET /file/docs/intro.md
         HTTP->>FS: tree.find_by_path("/docs/intro.md")
@@ -724,7 +725,7 @@ graph LR
 
 ---
 
-> **Litho Book 不是一个“系统”，而是一个“瞬间”** ——  
-> 你敲下命令，知识就在眼前。  
-> 无需等待，无需配置，无需思考。  
+> **Litho Book 不是一个“系统”，而是一个“瞬间”** ——
+> 你敲下命令，知识就在眼前。
+> 无需等待，无需配置，无需思考。
 > 这，就是极简架构的终极胜利。
